--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.26.4
 outcome==1.3.0.post0
 pandas==2.2.2
 PySocks==1.7.1
+flask-cors==4.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
