--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
