--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.12.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
