--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
+    "@fontsource/calistoga": "^5.1.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
