--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cors==1.0.1
+dnspython==2.6.1
+eventlet==0.37.0
 filelock==3.15.4
 Flask==3.0.3
 Flask-Cors==4.0.1
@@ -15,6 +17,7 @@ Flask-SocketIO==5.3.6
 future==1.0.0
 gevent==24.2.1
 greenlet==3.0.3
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
@@ -23,6 +26,7 @@ MarkupSafe==2.1.5
 neo4j==5.21.0
 numpy==1.26.4
 outcome==1.3.0.post0
+packaging==24.1
 pandas==2.2.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
